fix: spacing mobile version

--- a/style.css
+++ b/style.css
@@ -304,17 +304,17 @@ header{
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 100px 0px 0px;
+        padding: 120px 0px 0px;
     }
 
     #projects{
         margin: auto;
         max-width: 1000px;
-        padding: 100px 50px 0px;
+        padding: 80px 50px 0px;
     }
 
     #contact{
-        padding: 100px 50px 0px;
+        padding: 80px 50px 0px;
     }
 
     .obrigada {
